Frontend completed successfully

--- a/index.html
+++ b/index.html
@@ -27,6 +27,24 @@
 
     <hr>
 
+    <div class="form-popup" id="myForm">
+        <div class="form-container">            
+            <input type="text" id="memeID">
+
+            <label><b>Name</b></label>
+            <input type="text" id="memeName">
+
+            <label><b>Caption</b></label>
+            <input type="text" id="memeCaption">
+
+            <label><b>URL</b></label>
+            <input type="text" id="memeURL">
+
+            <button class="btn" id="memeEdit" onclick="updateContent()">Done</button>
+            <button class="btn cancel" onclick="closeForm()">Close</button>
+        </div>
+    </div>
+
     <div class="bottom">
 
     </div>
